style.css
:root {
  --dark-bg-clr: #1f2937;

  --hero-main-text-clr: #f9faf8;
  --hero-main-text-wgt: 900;
  --hero-main-text-sze: 48px;

  --hero-sec-text-clr: #e5e7eb;
  --hero-sec-text-sze: 18px;

  --header-logo-text-clr: #f9faf8;
  --header-logo-text-sze: 24px;

  --btn-cta-clr: #3882f6;

  --info-header-text-clr: #1f2937;
  --info-header-text-sze: 36px;
  --info-header-text-wgt: 900;

  --quote-section-bg-clr: #e5e7eb;

  --quote-text-clr: #1f2937;
  --quote-text-sze: 36px;
  --quote-text-stl: italic;
  --quote-text-wgt: light;

  --img-placeholder-clr: #aaa;
}

body {
  font-family: Roboto, sans-serif;
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  align-content: center;
  min-height: 100vh;
}

.header,
.hero,
.info,
.quote,
.cta {
  margin: 0 15%;
}

.content-1 {
  background-color: var(--dark-bg-clr);
  color: var(--hero-main-text-clr);
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 75px;
}

.header-logo {
  font-size: var(--header-logo-text-sze);
  color: var(--header-logo-text-clr);
  font-weight: 900;
}

.header ul {
  display: flex;
  list-style: none;
  padding: 0;
  gap: 10px;
  color: var(--hero-sec-text-clr);
  font-size: var(--hero-sec-text-sze);
}

.hero {
  padding-top: 100px;
  padding-bottom: 100px;
  display: flex;
  justify-content: center;
  gap: 100px;
  align-items: center;
}

.hero-text,
.image-placeholder {
  width: 450px;
}

.hero-main-text {
  font-size: var(--hero-main-text-sze);
  font-weight: 900;
  color: var(--hero-main-text-clr);
}

.hero-sec-text {
  color: var(--hero-sec-text-clr);
  font-size: var(--hero-sec-text-sze);
}

.button {
  width: 100px;
  height: 40px;
  background-color: var(--btn-cta-clr);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  margin-top: 16px;
}

.button a {
  color: var(--hero-sec-text-clr);
  font-size: var(--hero-sec-text-sze);
  text-decoration: none;
}

.image-placeholder {
  background-color: var(--img-placeholder-clr);
  display: flex;
  align-self: stretch;
  align-content: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.content-2 {
  background-color: white;
  display: flex;
  flex-direction: column;
  padding-top: 75px;
  padding-bottom: 100px;
}

.info-header-text {
  font-size: var(--info-header-text-sze);
  font-weight: var(--info-header-text-wgt);
  color: var(--info-header-text-clr);
  text-align: center;
  margin-bottom: 1em;
}

.card-group {
  display: flex;
  justify-content: center;
  gap: 40px;
}

.card-text,
.card-image {
  width: 150px;
}

.card-image {
  border-color: #3882f6;
  border-width: 4px;
  border-style: solid;
  border-radius: 10px;
  height: 150px;
}

.card-text {
  text-align: center;
}

.content-3 {
  background-color: var(--quote-section-bg-clr);
}

.quote {
  display: flex;
  flex-direction: column;
  margin-top: 100px;
  margin-bottom: 100px;
  padding: 0 180px;
}

.quote-text {
  font-size: var(--quote-text-sze);
  color: var(--quote-text-clr);
  font-weight: var(--quote-text-wgt);
  font-style: var(--quote-text-stl);
}

.attribution-text {
  text-align: end;
  font-weight: 900;
  font-size: 1.25em;
}

.content-4 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 100px;
}

.cta {
  background-color: var(--btn-cta-clr);
  border-radius: 10px;
  padding: 40px 100px;
  display: flex;
  flex: 1;
  justify-content: space-evenly;
  align-items: center;
}

.cta-block {
  display: flex;
  flex-direction: column;
  color: var(--header-logo-text-clr);
}

.cta-headline {
  font-size: 1.5em;
  font-weight: 900;
}

.cta .button {
  border-color: white;
  border-style: solid;
  margin-top: 0;
}

.footer {
  background-color: var(--dark-bg-clr);
  color: var(--hero-sec-text-clr);
  text-align: center;
  padding: 25px;
}

